--- a/buttons/assets/styles/index.scss
+++ b/buttons/assets/styles/index.scss
@@ -1,6 +1,4 @@
 @import "./utilities/breakpoints";
 
 @import "./base/settings";
-@import "./components/btndefault";
-@import "./components/btnbr";
-@import "./components/btnsubmit";
+@import "./components/btncomps";
