--- a/buttons/assets/styles/index.scss
+++ b/buttons/assets/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./utilities/breakpoints";
 
 @import "./base/settings";
+@import "./components/shadowcomps";
 @import "./components/btncomps";
