--- a/buttons/assets/styles/base/_settings.scss
+++ b/buttons/assets/styles/base/_settings.scss
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter");
+html {
+  font-family: "Inter", sans-serif;
+}
 body {
   max-height: 100vh;
   max-width: 100vw;
   display: inline-block;
 }
-
 a {
   color: black;
   text-decoration: none;
