--- a/buttons/assets/styles/index.css
+++ b/buttons/assets/styles/index.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter");
+html {
+  font-family: "Inter", sans-serif;
+}
+
 body {
   max-height: 100vh;
   max-width: 100vw;
@@ -9,12 +14,22 @@ a {
   text-decoration: none;
 }
 
+.shadow1 {
+  box-shadow: 1px 5px 9px 0px rgba(0, 0, 0, 0.658);
+}
+
+.shadhov1:hover {
+  box-shadow: 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
+  transition: 0.3s ease-in-out;
+}
+
 .btn-d {
   padding: 5px 40px;
   border: 1px solid rgba(0, 0, 0, 0.13);
   text-transform: uppercase;
   letter-spacing: 0.5px;
   font-size: 1em;
+  font-weight: 700;
   margin: 10px 0;
   transition: 0.3s ease-in-out;
 }
@@ -46,17 +61,4 @@ a {
 }
 .btn-no:hover a {
   color: aliceblue;
-}
-
-.shadeff1:hover {
-  box-shadow: 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
-  transition: 0.3s ease-in-out;
-}
-
-.shadeff2 {
-  box-shadow: 1px 5px 9px 0px rgba(0, 0, 0, 0.658);
-}
-.shadeff2:hover {
-  box-shadow: 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
-  transition: 0.3s ease-in-out;
 }/*# sourceMappingURL=index.css.map */
