--- a/buttons/assets/styles/base/_settings.scss
+++ b/buttons/assets/styles/base/_settings.scss
@@ -2,12 +2,22 @@
 html {
   font-family: "Inter", sans-serif;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   max-height: 100vh;
-  max-width: 100vw;
-  display: inline-block;
+  max-width: 50vw;
+  margin: 0;
+  padding: 30px;
 }
 a {
   color: black;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
