--- a/buttons/assets/styles/components/_btncomps.scss
+++ b/buttons/assets/styles/components/_btncomps.scss
@@ -1,13 +1,15 @@
 // Default settings
 .btn-d {
-  padding: 5px 40px;
-  border: 1px solid rgba(0, 0, 0, 0.13);
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
+  width: 10rem;
+  height: 2rem;
   font-size: 1em;
   font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  border: 1px solid rgba(0, 0, 0, 0.13);
   margin: 10px 0; // for display, remove it if u don't need it
   transition: 0.3s ease-in-out;
+
   &:hover {
     cursor: pointer;
   }
