--- a/buttons/assets/styles/components/_shadowcomps.scss
+++ b/buttons/assets/styles/components/_shadowcomps.scss
@@ -7,5 +7,17 @@
   &:hover {
     box-shadow: 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
     transition: 0.3s ease-in-out;
+    &:active {
+      box-shadow: inset 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
+      transition: 0.3s ease-in-out;
+    }
+  }
+}
+// inset shadows with hover
+.insetshadhov1 {
+  &:hover {
+    box-shadow: inset 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
+    border: none;
+    transition: 0.3s ease-in-out;
   }
 }
