--- a/buttons/assets/styles/index.css
+++ b/buttons/assets/styles/index.css
@@ -3,15 +3,26 @@ html {
   font-family: "Inter", sans-serif;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   max-height: 100vh;
-  max-width: 100vw;
-  display: inline-block;
+  max-width: 50vw;
+  margin: 0;
+  padding: 30px;
 }
 
 a {
   color: black;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .shadow1 {
@@ -22,14 +33,25 @@ a {
   box-shadow: 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
   transition: 0.3s ease-in-out;
 }
+.shadhov1:hover:active {
+  box-shadow: inset 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
+  transition: 0.3s ease-in-out;
+}
+
+.insetshadhov1:hover {
+  box-shadow: inset 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
+  border: none;
+  transition: 0.3s ease-in-out;
+}
 
 .btn-d {
-  padding: 5px 40px;
-  border: 1px solid rgba(0, 0, 0, 0.13);
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
+  width: 10rem;
+  height: 2rem;
   font-size: 1em;
   font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  border: 1px solid rgba(0, 0, 0, 0.13);
   margin: 10px 0;
   transition: 0.3s ease-in-out;
 }
