--- a/buttons/assets/styles/index.css
+++ b/buttons/assets/styles/index.css
@@ -45,7 +45,7 @@ a {
 }
 
 .btn-d {
-  width: 10rem;
+  width: 7rem;
   height: 2rem;
   font-size: 1em;
   font-weight: 700;
@@ -59,16 +59,21 @@ a {
   cursor: pointer;
 }
 
+.mob-btn {
+  width: 30px;
+  height: 30px;
+}
+
 .btn-br1 {
-  border-radius: 5px;
+  border-radius: 2.5px;
 }
 
 .btn-br2 {
-  border-radius: 10px;
+  border-radius: 7.5px;
 }
 
 .btn-br3 {
-  border-radius: 15px;
+  border-radius: 30px;
 }
 
 .btn-ok {
@@ -82,5 +87,15 @@ a {
   color: rgba(240, 248, 255, 0.918);
 }
 .btn-no:hover a {
+  color: aliceblue;
+}
+
+.btn-blue {
+  background-color: rgb(0, 136, 248);
+}
+.btn-blue a {
+  color: rgba(240, 248, 255, 0.918);
+}
+.btn-blue:hover a {
   color: aliceblue;
 }/*# sourceMappingURL=index.css.map */
