--- a/comps/assets/styles/base/_settings.scss
+++ b/comps/assets/styles/base/_settings.scss
@@ -21,3 +21,19 @@ a {
   width: 100%;
   height: 100%;
 }
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  li {
+    a {
+      &:hover {
+        color: rgb(243, 176, 95);
+      }
+      i {
+        font-size: 1.2rem;
+        padding: 10px;
+      }
+    }
+  }
+}
