--- a/comps/assets/styles/index.css
+++ b/comps/assets/styles/index.css
@@ -25,8 +25,25 @@ a {
   height: 100%;
 }
 
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+ul li a:hover {
+  color: rgb(243, 176, 95);
+}
+ul li a i {
+  font-size: 1.2rem;
+  padding: 10px;
+}
+
 .shadow1 {
   box-shadow: 1px 5px 9px 0px rgba(0, 0, 0, 0.658);
+}
+
+.insetshadow1 {
+  box-shadow: inset 1px 5px 9px 0px rgba(0, 0, 0, 0.658);
 }
 
 .shadhov1:hover {
@@ -42,6 +59,22 @@ a {
   box-shadow: inset 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
   border: none;
   transition: 0.3s ease-in-out;
+}
+
+.socials-shadhov1 ul li {
+  margin: 0 5px;
+}
+.socials-shadhov1 ul li a i {
+  border-radius: 10000%;
+  transition: 0.5s ease-in-out;
+}
+.socials-shadhov1 ul li a i:hover {
+  box-shadow: 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
+  transition: 0.5s ease-in-out;
+}
+.socials-shadhov1 ul li a i:hover:active {
+  box-shadow: inset 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
+  transition: 0.5s ease-in-out;
 }
 
 .btn-d {
@@ -98,4 +131,12 @@ a {
 }
 .btn-blue:hover a {
   color: aliceblue;
+}
+
+.socials {
+  height: -moz-fit-content;
+  height: fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 20px;
 }/*# sourceMappingURL=index.css.map */
