--- a/comps/assets/styles/components/_shadowcomps.scss
+++ b/comps/assets/styles/components/_shadowcomps.scss
@@ -32,9 +32,9 @@
       margin: 0 5px;
       a {
         i {
-          border-radius: 10000%;
-          transition: 0.5s ease-in-out;
+          box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
 
+          transition: 0.5s ease-in-out;
           &:hover {
             box-shadow: 1px 3px 7px 0px rgba(0, 0, 0, 0.877);
             transition: 0.5s ease-in-out;
