--- a/comps/assets/styles/base/_settings.scss
+++ b/comps/assets/styles/base/_settings.scss
@@ -7,10 +7,15 @@ html {
   padding: 0;
 }
 body {
-  max-height: 100vh;
-  max-width: 50vw;
+  // max-height: 100vh;
+  // max-width: 50vw;
   margin: 0;
   padding: 30px;
+  background-color: rgba(99, 136, 136, 0.692);
+}
+// flexboxs
+.dspflex {
+  display: flex;
 }
 a {
   color: black;
@@ -23,18 +28,39 @@ a {
 }
 ul {
   list-style: none;
-  display: flex;
   justify-content: space-evenly;
 }
 // Border radius
 .br1 {
-  border-radius: 2.5px;
+  border-radius: 0.3em;
 }
 .br2 {
-  border-radius: 7.5px;
+  border-radius: 0.6em;
 }
 .br3 {
-  border-radius: 30px;
+  border-radius: 1em;
+}
+.br4 {
+  border-radius: 2em;
+}
+.br5 {
+  border-radius: 3em;
+}
+.br6 {
+  border-radius: 5em;
+}
+// boxs
+.box25 {
+  width: 25%;
+}
+.boe50 {
+  width: 50%;
+}
+.box75 {
+  width: 75%;
+}
+.box100 {
+  width: 100%;
 }
 .tempbox {
   margin: 20px 0;
