--- a/comps/assets/styles/base/_settings.scss
+++ b/comps/assets/styles/base/_settings.scss
@@ -5,17 +5,27 @@ html {
 * {
   margin: 0;
   padding: 0;
+  border: 1px solid black; // for boxs display, remove it when you want
 }
 body {
-  // max-height: 100vh;
-  // max-width: 50vw;
   margin: 0;
-  padding: 30px;
+  padding: 0px;
   background-color: rgba(99, 136, 136, 0.692);
 }
 // flexboxs
 .dspflex {
   display: flex;
+}
+.dspflexbreak {
+  @include breakpoint(500px) {
+    display: flex;
+  }
+}
+.jcc {
+  justify-content: center;
+}
+.alic {
+  align-items: center;
 }
 a {
   color: black;
@@ -51,13 +61,19 @@ ul {
 }
 // boxs
 .box25 {
-  width: 25%;
+  @include breakpoint(500px) {
+    width: 25%;
+  }
 }
-.boe50 {
-  width: 50%;
+.box50 {
+  @include breakpoint(500px) {
+    width: 50%;
+  }
 }
 .box75 {
-  width: 75%;
+  @include breakpoint(500px) {
+    width: 75%;
+  }
 }
 .box100 {
   width: 100%;
